--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,7 @@
-certifi==2018.11.29
-chardet==3.0.4
-Click==7.0
 Flask==1.0.2
-Flask-Autodoc==0.1.2
-flickrapi==2.4.0
-gunicorn==19.9.0
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.0
-newsapi-python==0.2.3
-oauthlib==2.1.0
-python-dotenv==0.10.1
-requests==2.21.0
-requests-oauthlib==1.1.0
-requests-toolbelt==0.8.0
-six==1.12.0
-urllib3==1.24.1
-Werkzeug==0.14.1
+python-dotenv
+flickrapi	
+requests	
+newsapi-python
+tweepy
+instagram-scraper
