--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,36 @@
+alabaster==0.7.12
+Babel==2.6.0
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+docutils==0.14
 Flask==1.0.2
-python-dotenv
-flickrapi	
-requests	
-newsapi-python
-tweepy
-instagram-scraper
+Flask-Autodoc==0.1.2
+flickrapi==2.4.0
+gunicorn==19.9.0
+idna==2.8
+imagesize==1.1.0
+instagram-scraper==1.5.41
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+newsapi-python==0.2.3
+oauthlib==2.1.0
+packaging==18.0
+Pygments==2.3.1
+pyparsing==2.3.0
+PySocks==1.6.8
+python-dotenv==0.10.1
+pytz==2018.9
+requests==2.21.0
+requests-oauthlib==1.1.0
+requests-toolbelt==0.8.0
+six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==1.8.3
+sphinxcontrib-websupport==1.1.0
+tqdm==4.29.1
+tweepy==3.7.0
+urllib3==1.24.1
+Werkzeug==0.14.1
